--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "heroku": "^7.59.2",
     "json-server": "^0.17.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
